# ppx_deriving_decoders

./: .gitignore  Makefile  README.md  dune-project  notes.org  ppx_deriving_decoders.opam
.github/workflows/: main.yaml
lib/: dune
pp/: dune
src/: decoders_deriver.ml  dune  encoders_deriver.ml  expander.ml  ppx_deriving_decoders.ml  utils.ml
test/: dummy.ml  dune  test.ml  test_decoders.ml  test_encoders.ml  test_identity.ml  test_invert.ml
